			vms-empire news

Repository head:
        Full ANSI prototypes for all functions.

1.13: 2014-12-14T17:06:26Z
	Comment on entry to and exit from edit mode.
	Cleaned up packaging and install/uninstall productions.

1.12: 2014-05-20T09:03:09Z
	Incorporated Dennis Pinckard's fix for a Mac OS/X port bug.
	Added desktop file.

1.11: 2013-12-31T17:31:04Z
	Clean up code to modern C, apply cppcheck.
	Fix code typo reported as Debian bug #593434

1.10: 2013-08-22T23:47:21Z
	Fix core dump when a satellite bounced off the world edge.
	Full ANSIfication of function prototypes (which fixed the 
	sat bug - the code appears to have been tickling some obscure
	bug in the compilation of function calls with K&R-style prototypes).

1.9: 2012-02-16T22:59:22Z
	Drop RPM packaging. Documentation cleanups.

1.8: 2010-10-21T12:47:33Z
	Joe Wells's patch to enable different-sized worlds.  Minor fixes to
	map functions by Andrew Morrow. More on the history of the game.
	Enable arrow keys in edit mode.
	License changed from Chuck Simmons's cosmetically tweaked clone
	of the GPL to GPL proper, so the classifier systems that forge
	and archive sites use will be less confused.

1.7: 2004-09-27T21:53:41Z
	Documentation fixes.  The old empire.doc file has been replaced
	by the man page.

1.6: 2003-12-29T11:11:53Z
	Source RPMs can be built by non-root user.

1.5: 2003-12-29T11:06:21Z
	Cleanup release with new build machinery.

1.4: 2002-08-01T20:04:09Z
	Packaging tweaks.  RPM spec fixes.  READ.ME broken up into
	READ.ME and NEWS.  Obsolete bug notes removed.  Option -f to
	set savefile added.  I'd like to move the documentation to XML, 
	but can't yet because db2man doesn't render tables.

1.3: 2002-04-19T10:25:43Z
	Walt Stoneburner's cleanup patch addressing all compiler errors and 
	warnings, both in debug and in production mode; works with GCC v3.0.3.

1.2: 2000-07-28T16:04:26Z
	The victory-odds table in previous versions was seriously buggy.