@@ -1,6 +1,7 @@
 			vms-empire news
 
 Repository head:
+        Add an identifying magic cookie and version to save files.
         Full ANSI prototypes for all functions.
 
 1.13: 2014-12-14T17:06:26Z
